feat: complete proc_jail v0.1.0 implementation
- Core library with all 13 normative requirements from spec
- Python bindings via PyO3 with complete API surface
- Type stubs (proc_jail.pyi) for IDE support
- CI workflows (test, lint, security audit, Python tests)
- Release workflow for crates.io and PyPI
- Documentation: README, SECURITY.md, CHANGELOG.md
- License files (MIT/Apache-2.0)

Test results:
- 62 unit tests
- 24 adversarial tests
- 12 integration tests
- 28 Python tests
- 1 doc test

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
+# Rust
 /target
+Cargo.lock
+
+# Python
+python/.venv/
+python/target/
+__pycache__/
+*.py[cod]
+*.so
+*.pyd
+.pytest_cache/
+*.egg-info/
+dist/
+build/
+.eggs/
