--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
         with:
           toolchain: ${{ matrix.rust }}
       - uses: Swatinem/rust-cache@v2
+      - name: Generate Cargo.lock
+        run: cargo generate-lockfile
       - run: cargo test --features tracing
 
   clippy:
@@ -61,14 +63,6 @@ jobs:
         env:
           RUSTDOCFLAGS: -D warnings
 
-  audit:
-    name: Security Audit
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: rustsec/audit-check@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
 
   python:
     name: Python Bindings
@@ -86,7 +80,7 @@ jobs:
         run: maturin build
       - name: Test imports
         run: |
-          pip install python/target/wheels/*.whl
+          pip install $(find python/target -name '*.whl' | head -1)
           python -c "
           from proc_jail import (
               ProcPolicyBuilder, ProcRequest, ArgRules,
@@ -114,7 +108,7 @@ jobs:
         working-directory: python
         run: |
           maturin build
-          pip install target/wheels/*.whl
+          pip install $(find target -name '*.whl' | head -1)
       - name: Run Python tests
         working-directory: python
         run: pytest tests/ -v --tb=short
