--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Install Rust
-        uses: dtolnay/rust-action@stable
+        uses: dtolnay/rust-toolchain@stable
       
       - name: Publish proc_jail
         run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
@@ -36,7 +36,7 @@ jobs:
           python-version: '3.12'
       
       - name: Install Rust
-        uses: dtolnay/rust-action@stable
+        uses: dtolnay/rust-toolchain@stable
       
       - name: Build wheels
         uses: PyO3/maturin-action@v1
